--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,9 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-- name: Get repo and time
-  id: info
-  uses: actions/github-script@v3.1
+    steps:- name: Get repo and time
+       id: info
+      uses: actions/github-script@v3.1
   with:
     result-encoding: string
     script: |
@@ -47,8 +42,8 @@ jobs:
 - name: Mirror the GitHub repos to Gitee with cache
   uses: Yikun/hub-mirror-action@v0.12
   with:
-    src: github/3083649887
-    dst: gitee/TZPOS
+    src: github/yi-Xu-0100
+    dst: gitee/yiXu0100
     dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
     dst_token: ${{ secrets.GITEE_TOKEN }}
     static_list: '${{ steps.info.outputs.result }}'
